CSS Code Refactor: Fixing Redundencies & Variables Refactoring code, removing redundent code and adding variables to make the code more readable and maintainable.
- Made CSS Buttons more consistant and reliable
- Made Variables more consistant naming
- Fixed broken colours, fixed broken spacing.
- Added proper background for headers in tables
- Fixed layout with graphs to make more consistant

--- a/greenova/static/css/components/colours.css
+++ b/greenova/static/css/components/colours.css
@@ -60,6 +60,9 @@
   --greenova-warning-background: var(--greenova-notif-primary-high);
   --greenova-warning-text: #000000;
 
+  --greenova-error-background: var(--greenova-notif-primary-high);
+  --greenova-error-text: #000000;
+
   /* Notification Secondary High - Use Cases: outline of notification marker */
   --greenova-notif-secondary-high: #FFB6B6;
 
@@ -106,46 +109,4 @@
   /* Data Null - Use Cases: Colour for when data points are out of focus of the chart. */
   --greenova-data-null: #9C9F93;
 
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: var(--greenova-text-secondary-dark);
-
-  &:first-child {
-    color: var(--greenova-text-primary-dark);
-  }
-}
-
-header {
-  background: var(--pico-secondary-background)
-}
-
-/* Element is used for placeholder text before you type. */
-input[type='text']::placeholder
-
-/*input, optgroup, select, textarea*/
-  {
-  color: var(--greenova-tertiary-dark);
-  /* Mutable Text, for text box hints */
-}
-
-p,
-article {
-  color: var(--greenova-text-secondary-dark);
-}
-
-/* Navigation */
-[role='navigation'],
-[role='navigation'] [role="menuitem"] {
-  background: var(--greenova-beige-primary);
-  color: var(--greenova-text-primary-dark) !important;
-}
-
-[role='navigation'] [role="menuitem"][aria-current] {
-  background: var(--greenova-beige-secondary);
 }
