--- a/greenova/static/css/components/design.css
+++ b/greenova/static/css/components/design.css
@@ -1,11 +1,10 @@
-/* This is the Ubuntu font we're using for the website */
+/* Font Face */
 @font-face {
-  /* Imported statically to not rely on Google. */
   font-family: 'Ubuntu';
   src: url('/static/fonts/Ubuntu-Regular.ttf');
 }
 
-
+/* Root Variables */
 :root {
   --greenova-font-family: "Ubuntu";
   --greenova-font-weight: normal;
@@ -19,6 +18,7 @@
   --greenova-border-radius: 8px;
   --greenova-border-radius-small: 4px;
   --greenova-spacing: 7.5px;
+  --greenova-spacing-small: 5px;
   --greenova-padding: 10px;
   --greenova-padding-small: 5px;
   --greenova-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -31,25 +31,24 @@
   --greenova-button-size: 16px;
 }
 
+/* Global Styles */
 * {
   letter-spacing: var(--greenova-letter-spacing);
 }
 
-/*Font: Ubuntu
-Title: 24
-Sub Titles: 18 (Bold)
-Text Entries: 16
-Table Entries: 14 */
+/* Headings */
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+  color: var(--greenova-text-secondary-dark);
 
   /* Title */
   &:first-child {
     font-size: var(--greenova-title-size);
+    color: var(--greenova-text-primary-dark);
   }
 
   /* Subtitle */
@@ -59,7 +58,49 @@ h6 {
   }
 }
 
-/* Mutable Text Entries */
+/* Header */
+header {
+  background: var(--pico-secondary-background);
+}
+
+/* Placeholder Text */
+input[type='text']::placeholder {
+  color: var(--greenova-tertiary-dark);
+}
+
+/* Paragraphs and Articles */
+p,
+article {
+  color: var(--greenova-text-secondary-dark);
+  font-size: var(--greenova-text-size);
+}
+
+/* Navigation */
+[role='navigation'],
+[role='navigation'] [role="menuitem"] {
+  background: var(--greenova-beige-primary);
+  color: var(--greenova-text-primary-dark) !important;
+}
+
+[role='navigation'] [role="menuitem"][aria-current] {
+  background: var(--greenova-beige-secondary);
+}
+
+[role='navigation'],
+[role='navigation'] ul,
+[role='navigation'] ul li {
+  border-radius: var(--greenova-border-radius);
+  margin: 0px;
+  padding: 0px;
+}
+
+[role='navigation'] [role="menuitem"] {
+  border-radius: var(--greenova-border-radius);
+  margin: 0px;
+  padding: var(--greenova-padding);
+}
+
+/* Form Elements */
 input,
 optgroup,
 select,
@@ -67,61 +108,9 @@ textarea {
   font-size: var(--greenova-text-size);
 }
 
-/* Text Entries: 16 */
-p,
-article {
-  font-size: var(--greenova-text-size);
-}
-
-/* Table Entries: 14 */
+/* Tables */
 table,
 table thead,
 table tbody {
   font-size: var(--greenova-table-size) !important;
-}
-
-
-/*Component Corner Radius: 8
-Inter Component Spacing: 15
-Component Padding: 10*/
-/* Buttons: 16(Bold) */
-button,
-[type='submit'],
-[type='reset'],
-[role='button'] {
-  font-size: var(--greenova-button-size);
-  font-weight: bold !important;
-
-  /* Stops top from looking weird */
-  min-height: 41px;
-
-  border-radius: var(--greenova-border-radius);
-  padding: var(--greenova-padding);
-}
-
-button#chat-toggle>span {
-  font-weight: normal !important;
-}
-
-/* If the button is apart of a menu... */
-[role='menuitem'] {
-  margin: 0px var(--greenova-spacing);
-}
-
-
-/* Navigation */
-[role='navigation'],
-[role='navigation'] ul,
-[role='navigation'] ul li {
-  border-radius: var(--greenova-border-radius);
-
-  margin: 0px;
-  padding: 0px;
-}
-
-[role='navigation'] [role="menuitem"] {
-  border-radius: var(--greenova-border-radius);
-
-  margin: 0px;
-  padding: var(--greenova-padding);
 }
