--- a/greenova/static/css/components/pagination.css
+++ b/greenova/static/css/components/pagination.css
@@ -14,7 +14,7 @@
 }
 
 .pagination-info {
-  color: var(--text-muted);
+  color: var(--greenova-tertiary-dark);
 }
 
 .pagination a {
